2012-04-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28744: Can't load bootloader to xmega128a1 (part 2, fix for
	firmware >= V7.x)
	* jtagmkII.c: Add firmware-version dependent handling of Xmega parameters.
	V7.x firmware expects the NVM offsets being specified through the Xmega
	parameters command, but left out as part of the memory address itself.
	* jtagmkII_private.h: Add CMND_SET_XMEGA_PARAMS, and struct xmega_device_desc.
	* config_gram.y: Add mcu_base keyword.
	* avrpart.h: (Dito.)
	* lexer.l: (Dito.)
	* avrdude.conf.in (.xmega): add mcu_base, and data memory segment.

2012-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28744: Can't load bootloader to xmega128a1 (part 1, fix for
	firmware < V7.x)
	* jtagmkII.c: When going to write to the boot section of flash,
	use MTYPE_BOOT_FLASH rather than MTYPE_FLASH
	* jtagmkII_private.h: add MTYPE_BOOT_FLASH constant

2012-03-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII_private.h: Sort commands, response codes and events
	into numerical order.

2012-03-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30451: Accessing some Xmega memory sections gives not
	supported error
	* stk500v2.c: Handle all Xmega memory sections (except
	"prodsig" which is not documented in AVR079)
	* fileio.c: Treat the "boot", "application", and "apptable"
	regions (which are actually subregions of "flash") all as
	being flash, i.e. suppress trailing 0xFF bytes when reading
	them
	* avr.c: (Dito.)

2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_close): The GO command before signing off
	turned out to be not required for normal megaAVR devices, and to
	cause the exact opposite (i.e. the target stopping) on Xmega
	devices being programmed to JTAG.  However, programming Xmega
	devcies through PDI *does* need the GO command.

2012-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Print a configuration summary at the end of the
	configure run
